# GroceryTracker

./: .gitignore  ONBOARDING_DL.md  PROYECTO.md  README.md  RUN_COLAB.md  RUN_LOCAL_FEDORA.md  pyproject.toml
configs/: classes.yaml  classical.yaml  data.yaml  deep_yolo.yaml
data/raw/: README.md
notebooks/: 01_class_selection.ipynb  02_classical_dev.ipynb  03_training_visualization.ipynb  04_classical_results.ipynb  colab_build_features.ipynb  colab_hard_neg.ipynb  colab_infer.ipynb  colab_train_svm.ipynb  colab_yolo_infer.ipynb  colab_yolo_train.ipynb
scripts/: colab_helper.py  generate_onboarding_pdf.py  generate_overview_pdf.py  import_colab_svm.py  prepare_d2s.py  prepare_splits.py  prepare_yolo_dataset.py  run_classical_hard_neg.py  run_classical_infer.py  run_classical_train.py  run_deep_infer.py  run_deep_train.py  run_overnight.ps1  run_overnight.sh  setup.ps1  setup.sh  test_classical_tiny.py  train_codebook.py
src/grocery_detection/: __init__.py
src/grocery_detection/classical/: __init__.py  classifier.py  features.py  hard_negative.py  iou.py  labeling.py  nms.py  pipeline.py  preprocessing.py  proposals.py  training_set.py
src/grocery_detection/classical/descriptors/: __init__.py  bovw.py  hog.py  sift.py
src/grocery_detection/data/: __init__.py  coco_to_yolo.py  download_d2s.py  eda.py  filter_classes.py  prepare.py  visualize.py
src/grocery_detection/deep/: __init__.py  export_coco.py  infer.py  train.py
src/grocery_detection/utils/: atomic.py  config.py  seed.py
