[project]
name = "grocery-detection"
version = "0.1.0"
description = "Comparativa Visión Clásica vs Deep Learning sobre productos Mercadona — proyecto ABP UAB"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "opencv-contrib-python>=4.9",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "scikit-image>=0.22",
    "torch>=2.2",
    "torchvision>=0.17",
    "ultralytics>=8.1",
    "pycocotools>=2.0.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "rich>=13.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "notebook>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grocery_detection"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]
ignore = ["E501"]
